<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >

    <string name="app_name" translatable="false">AnDICT</string>

<!-- DictSettingsActivity -->
    <string name="dict_settings">AnDICT Settings</string>

    <string name="pref_server_title">DICT server address</string>
    <string name="pref_server_message">Enter a hostname or IP address of the DICT server to use for lookups (eg. dict.org)\n</string>
    <string name="pref_server_default" translatable="false">dict.org</string>

    <string name="pref_port_title">DICT server port</string>
    <string name="pref_port_message">Enter the port of the DICT server (usually 2628)\n</string>
    <string name="port_hint">Port</string>

    <string name="pref_database_title">Databases to search</string>
    <string name="pref_database_default" translatable="false">@string/all_matches</string>
    <string name="all_matches">All matches</string>
    <string name="first_match">First match</string>

    <string name="pref_strategy_enable">Use search strategy</string>
    <string name="pref_strategy_title">Search strategy</string>
    <string name="pref_strategy_default" translatable="false">@string/strategy_exact</string>
    <string name="strategy_exact" translatable="false">exact</string>
    <string name="strategy_prefix" translatable="false">prefix</string>

<!-- PortPreferences -->
    <string name="button_add" translatable="false">+</string>
    <string name="button_sub" translatable="false">-</string>
    <string name="invalid_title">Invalid port number</string>
    <string name="invalid_message">Valid port number range: $1%d - $2%d</string>
    <string name="invalid_button" translatable="false">@android:string/ok</string>

<!-- RemoteEntityPreferences -->
    <string name="pref_databases_progress">Fetching databases from dict server…</string>
    <string name="pref_strategies_progress">Fetching strategies from dict server…</string>

<!-- DictActivity -->
    <string name="dict_activity" translatable="false">@string/app_name</string>

    <string name="edit_hint">Enter a word to look up:</string>
    <string name="button_lookup">Lookup</string>
    <string name="progress">Looking up word…</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="clipboard_copied">Definition copied to clipboard.</string>

<!-- Messages -->
    <string name="message_network_error">Network error.</string>
    <string name="message_connected">Connected to %s</string>
    <string name="message_no_result">No result.</string>
</resources>
