<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/port_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_port_message"
        />

<!-- Custom NumberPicker -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add"
                />

            <EditText
                android:id="@+id/port_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port_hint"
                android:inputType="number"
                />

            <Button
                android:id="@+id/button_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_sub"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>
</LinearLayout>
